--- a/src/DashboardBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/DashboardBundle/Resources/views/Dashboard/index.html.twig
@@ -1,6 +1,8 @@
 {% extends 'DashboardBundle:Common:backend.html.twig' %}
 
-{#Dashboard#}
+{% block content %}
+    Dashboard
+    <a href="{{path('properties_index')}}">Properties</a>
+    <a href="{{path('fos_user_security_logout')}}">Log out</a>
 
-{#<a href="{{path('properties_index')}}">Properties</a>#}
-{#<a href="{{path('fos_user_security_logout')}}">Log out</a>#}
+{% endblock content%}
