--- a/src/DashboardBundle/Resources/views/Common/partials/_admin-navegation.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/partials/_admin-navegation.html.twig
@@ -3,19 +3,19 @@
         <nav>
             <ul class="menu">
                 <li class="avatar">
-                    <a href="admin-dashboard.html#">
+                    <a href="{{path('profile_index')}}">
                         <img src="{{ asset('bundles/dashboard/people/01.jpg') }}" alt="Avatar">
-                                    <span class="avatar-content">
-                                        <span class="avatar-title">Livan L. Frometa Osorio</span>
-                                        <span class="avatar-subtitle">Project Manager</span>
-                                    </span><!-- /.avatar-content -->
+                        <span class="avatar-content">
+                            <span class="avatar-title">Livan L. Frometa Osorio</span>
+                            <span class="avatar-subtitle">Project Manager</span>
+                        </span><!-- /.avatar-content -->
                     </a>
                 </li>
                 <li class=" active ">
-                    <a href="admin-dashboard.html"><strong><i class="fa fa-dashboard"></i></strong> <span>Dashboard</span></a>
+                    <a href="{{path('dashboard_index')}}"><strong><i class="fa fa-dashboard"></i></strong> <span>Dashboard</span></a>
                 </li>
                 <li class="">
-                    <a href="admin-properties.html"><strong><i class="fa fa-building"></i></strong> <span>Properties</span></a>
+                    <a href="{{path('properties_index')}}"><strong><i class="fa fa-building"></i></strong> <span>Properties</span></a>
                 </li>
                 <li class="">
                     <a href="admin-property-browser.html"><strong><i class="fa fa-th-list"></i></strong> <span>Property Browser</span></a>
@@ -34,10 +34,9 @@
                 </li>
             </ul>
         </nav>
-
         <div class="layer"></div>
-    </div><!-- /.admin-navigation-inner -->
-</div><!-- /.admin-navigation -->
+    </div>
+</div>
 
 
 
