--- a/src/DashboardBundle/Resources/views/Profile/index.html.twig
+++ b/src/DashboardBundle/Resources/views/Profile/index.html.twig
@@ -82,7 +82,7 @@
 					<div class="property-box">
 						<div class="property-box-image">
 							<a href="agents-detail.html#">
-								<img src="assets/img/tmp/medium/1.jpg" alt="">
+								<img src="{{ asset('bundles/dashboard/properties/1.jpg') }}" alt="">
 
 			<span class="property-box-excerpt">
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ipsum nibh. Vivamus vehicula consequat justo, id molestie nisl feugiat dignissim. Nam a blandit leo, a porta nisl.
@@ -125,7 +125,7 @@
 					<div class="property-box">
 						<div class="property-box-image">
 							<a href="agents-detail.html#">
-								<img src="assets/img/tmp/medium/2.jpg" alt="">
+								<img src="{{ asset('bundles/dashboard/properties/2.jpg') }}" alt="">
 
 			<span class="property-box-excerpt">
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ipsum nibh. Vivamus vehicula consequat justo, id molestie nisl feugiat dignissim. Nam a blandit leo, a porta nisl.
@@ -168,7 +168,7 @@
 					<div class="property-box">
 						<div class="property-box-image">
 							<a href="agents-detail.html#">
-								<img src="assets/img/tmp/medium/3.jpg" alt="">
+								<img src="{{ asset('bundles/dashboard/properties/3.jpg') }}" alt="">
 
 			<span class="property-box-excerpt">
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ipsum nibh. Vivamus vehicula consequat justo, id molestie nisl feugiat dignissim. Nam a blandit leo, a porta nisl.
@@ -211,7 +211,7 @@
 					<div class="property-box">
 						<div class="property-box-image">
 							<a href="agents-detail.html#">
-								<img src="assets/img/tmp/medium/4.jpg" alt="">
+								<img src="{{ asset('bundles/dashboard/properties/4.jpg') }}" alt="">
 
 			<span class="property-box-excerpt">
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ipsum nibh. Vivamus vehicula consequat justo, id molestie nisl feugiat dignissim. Nam a blandit leo, a porta nisl.
@@ -254,7 +254,7 @@
 					<div class="property-box">
 						<div class="property-box-image">
 							<a href="agents-detail.html#">
-								<img src="assets/img/tmp/medium/5.jpg" alt="">
+								<img src="{{ asset('bundles/dashboard/properties/5.jpg') }}" alt="">
 
 			<span class="property-box-excerpt">
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ipsum nibh. Vivamus vehicula consequat justo, id molestie nisl feugiat dignissim. Nam a blandit leo, a porta nisl.
@@ -297,7 +297,7 @@
 					<div class="property-box">
 						<div class="property-box-image">
 							<a href="agents-detail.html#">
-								<img src="assets/img/tmp/medium/6.jpg" alt="">
+								<img src="{{ asset('bundles/dashboard/properties/6.jpg') }}" alt="">
 
 			<span class="property-box-excerpt">
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ipsum nibh. Vivamus vehicula consequat justo, id molestie nisl feugiat dignissim. Nam a blandit leo, a porta nisl.
