--- a/src/DashboardBundle/Resources/views/Properties/index.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/index.html.twig
@@ -5,18 +5,191 @@
 {% endblock breadcrumb%}
 
 {% block content %}
-	<ul>
-		{% for data in properties %}
-			<li>
-				<img height="150" src="{{data.photos.0}}" >
-				<br />
-				<a href="{{path('template_index')}}?id_property={{data.mlsId}}">
-					Property - {{loop.index}}
-				</a>
-				<hr />
-			</li>
-		{% endfor %}
-	</ul>
+	{#<ul>#}
+		{#{% for data in properties %}#}
+			{#<li>#}
+				{#<img height="150" src="{{data.photos.0}}" >#}
+				{#<br />#}
+				{#<a href="{{path('template_index')}}?id_property={{data.mlsId}}">#}
+					{#Property - {{loop.index}}#}
+				{#</a>#}
+				{#<hr />#}
+			{#</li>#}
+		{#{% endfor %}#}
+	{#</ul>#}
+
+	<div class="row">
+		<h1 class="page-header">Properties</h1>
+
+		<table class="table table-simple">
+			<thead>
+			<tr>
+				<th class="min-width nowrap"></th>
+				<th class="min-width nowrap">ID</th>
+				<th class="min-width nowrap">Photo</th>
+				<th>Title</th>
+				<th>Price</th>
+				<th>Type</th>
+				<th>Date</th>
+				<th class="min-width nowrap"></th>
+			</tr>
+			</thead>
+			<tbody>
+			<tr>
+				<td class="min-width nowrap"><input type="checkbox"></td>
+				<td class="semi-bold">#123</td>
+				<td>
+					<img src="{{ asset('bundles/dashboard/properties/1.jpg') }}" width="40" alt="">
+				</td>
+				<td>
+					<a href="admin-properties.html#">Luxury Apartment</a>
+				</td>
+				<td>$ 120 000</td>
+				<td>Apartment</td>
+				<td>11/20/2015</td>
+				<td class="min-width nowrap"><a href="admin-properties.html#" class="btn-standard">Edit</a> <a href="admin-properties.html#" class="btn-alert">Delete</a></td>
+			</tr>
+			<tr>
+				<td class="min-width nowrap"><input type="checkbox"></td>
+				<td class="semi-bold">#123</td>
+				<td>
+					<img src="{{ asset('bundles/dashboard/properties/1.jpg') }}" width="40" alt="">
+				</td>
+				<td>
+					<a href="admin-properties.html#">Luxury Apartment</a>
+				</td>
+				<td>$ 120 000</td>
+				<td>Apartment</td>
+				<td>11/20/2015</td>
+				<td class="min-width nowrap"><a href="admin-properties.html#" class="btn-standard">Edit</a> <a href="admin-properties.html#" class="btn-alert">Delete</a></td>
+			</tr>
+			<tr>
+				<td class="min-width nowrap"><input type="checkbox"></td>
+				<td class="semi-bold">#123</td>
+				<td>
+					<img src="{{ asset('bundles/dashboard/properties/1.jpg') }}" width="40" alt="">
+				</td>
+				<td>
+					<a href="admin-properties.html#">Luxury Apartment</a>
+				</td>
+				<td>$ 120 000</td>
+				<td>Apartment</td>
+				<td>11/20/2015</td>
+				<td class="min-width nowrap"><a href="admin-properties.html#" class="btn-standard">Edit</a> <a href="admin-properties.html#" class="btn-alert">Delete</a></td>
+			</tr>
+			<tr>
+				<td class="min-width nowrap"><input type="checkbox"></td>
+				<td class="semi-bold">#123</td>
+				<td>
+					<img src="{{ asset('bundles/dashboard/properties/1.jpg') }}" width="40" alt="">
+				</td>
+				<td>
+					<a href="admin-properties.html#">Luxury Apartment</a>
+				</td>
+				<td>$ 120 000</td>
+				<td>Apartment</td>
+				<td>11/20/2015</td>
+				<td class="min-width nowrap"><a href="admin-properties.html#" class="btn-standard">Edit</a> <a href="admin-properties.html#" class="btn-alert">Delete</a></td>
+			</tr>
+			<tr>
+				<td class="min-width nowrap"><input type="checkbox"></td>
+				<td class="semi-bold">#123</td>
+				<td>
+					<img src="{{ asset('bundles/dashboard/properties/1.jpg') }}" width="40" alt="">
+				</td>
+				<td>
+					<a href="admin-properties.html#">Luxury Apartment</a>
+				</td>
+				<td>$ 120 000</td>
+				<td>Apartment</td>
+				<td>11/20/2015</td>
+				<td class="min-width nowrap"><a href="admin-properties.html#" class="btn-standard">Edit</a> <a href="admin-properties.html#" class="btn-alert">Delete</a></td>
+			</tr>
+			<tr>
+				<td class="min-width nowrap"><input type="checkbox"></td>
+				<td class="semi-bold">#123</td>
+				<td>
+					<img src="{{ asset('bundles/dashboard/properties/1.jpg') }}" width="40" alt="">
+				</td>
+				<td>
+					<a href="admin-properties.html#">Luxury Apartment</a>
+				</td>
+				<td>$ 120 000</td>
+				<td>Apartment</td>
+				<td>11/20/2015</td>
+				<td class="min-width nowrap"><a href="admin-properties.html#" class="btn-standard">Edit</a> <a href="admin-properties.html#" class="btn-alert">Delete</a></td>
+			</tr>
+			<tr>
+				<td class="min-width nowrap"><input type="checkbox"></td>
+				<td class="semi-bold">#123</td>
+				<td>
+					<img src="{{ asset('bundles/dashboard/properties/1.jpg') }}" width="40" alt="">
+				</td>
+				<td>
+					<a href="admin-properties.html#">Luxury Apartment</a>
+				</td>
+				<td>$ 120 000</td>
+				<td>Apartment</td>
+				<td>11/20/2015</td>
+				<td class="min-width nowrap"><a href="admin-properties.html#" class="btn-standard">Edit</a> <a href="admin-properties.html#" class="btn-alert">Delete</a></td>
+			</tr>
+			<tr>
+				<td class="min-width nowrap"><input type="checkbox"></td>
+				<td class="semi-bold">#123</td>
+				<td>
+					<img src="{{ asset('bundles/dashboard/properties/1.jpg') }}" width="40" alt="">
+				</td>
+				<td>
+					<a href="admin-properties.html#">Luxury Apartment</a>
+				</td>
+				<td>$ 120 000</td>
+				<td>Apartment</td>
+				<td>11/20/2015</td>
+				<td class="min-width nowrap"><a href="admin-properties.html#" class="btn-standard">Edit</a> <a href="admin-properties.html#" class="btn-alert">Delete</a></td>
+			</tr>
+			<tr>
+				<td class="min-width nowrap"><input type="checkbox"></td>
+				<td class="semi-bold">#123</td>
+				<td>
+					<img src="{{ asset('bundles/dashboard/properties/1.jpg') }}" width="40" alt="">
+				</td>
+				<td>
+					<a href="admin-properties.html#">Luxury Apartment</a>
+				</td>
+				<td>$ 120 000</td>
+				<td>Apartment</td>
+				<td>11/20/2015</td>
+				<td class="min-width nowrap"><a href="admin-properties.html#" class="btn-standard">Edit</a> <a href="admin-properties.html#" class="btn-alert">Delete</a></td>
+			</tr>
+			<tr>
+				<td class="min-width nowrap"><input type="checkbox"></td>
+				<td class="semi-bold">#123</td>
+				<td>
+					<img src="{{ asset('bundles/dashboard/properties/1.jpg') }}" width="40" alt="">
+				</td>
+				<td>
+					<a href="admin-properties.html#">Luxury Apartment</a>
+				</td>
+				<td>$ 120 000</td>
+				<td>Apartment</td>
+				<td>11/20/2015</td>
+				<td class="min-width nowrap"><a href="admin-properties.html#" class="btn-standard">Edit</a> <a href="admin-properties.html#" class="btn-alert">Delete</a></td>
+			</tr>
+			</tbody>
+		</table>
+
+		<div class="center">
+			<ul class="pagination">
+				<li><a href="admin-properties.html#"><span aria-hidden="true">«</span><span class="sr-only">Previous</span></a></li>
+				<li><a href="admin-properties.html#">1</a></li>
+				<li><a href="admin-properties.html#">2</a></li>
+				<li class="active"><a href="admin-properties.html#">3</a></li>
+				<li><a href="admin-properties.html#">4</a></li>
+				<li><a href="admin-properties.html#">5</a></li>
+				<li><a href="admin-properties.html#"><span aria-hidden="true">»</span><span class="sr-only">Next</span></a></li>
+			</ul>
+		</div><!-- /.center -->
+	</div>
 {% endblock content%}
 
 
