Add new templeate to dashboard

--- a/src/AppBundle/Resources/views/Common/frontend.html.twig
+++ b/src/AppBundle/Resources/views/Common/frontend.html.twig
@@ -28,9 +28,7 @@
             <div class="main">
                 <div class="container">
                     <div class="row">
-                        {% block content  %}
-                            {% include 'AppBundle:Common:Partials/_public-index-content.html.twig' %}
-                        {% endblock content  %}
+                        {% block content  %} {% endblock content  %}
                     </div><!-- /.row -->
                 </div><!-- /.container -->
             </div><!-- /.main -->
