--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,5 @@
 {% extends 'AppBundle:Common:frontend.html.twig' %}
+
+{% block content  %}
+    {% include 'AppBundle:Common:Partials/_public-index-content.html.twig' %}
+{% endblock content  %}
