--- a/src/AppBundle/Resources/views/Common/Partials/_public-header.html.twig
+++ b/src/AppBundle/Resources/views/Common/Partials/_public-header.html.twig
@@ -141,7 +141,7 @@
                         </li>
 
                         <li class="important">
-                            <a href="admin-login.html">Admin</a>
+                            <a href="{{path('fos_user_security_login')}}">Login</a>
                         </li>
                     </ul><!-- /.nav -->
                 </nav>
