Add links for homepage and logout

--- a/src/AppBundle/Resources/views/Common/Partials/_public-header.html.twig
+++ b/src/AppBundle/Resources/views/Common/Partials/_public-header.html.twig
@@ -1,7 +1,7 @@
 
 <div class="header-main">
     <div class="header-title">
-        <a href="index.html">
+        <a href="{{path('homepage')}}">
             <img src="{{ asset('bundles/dashboard/assets/img/logo.png') }}" alt="Realsite">
 
             <span>Realsite</span>
