--- a/src/DashboardBundle/Resources/views/Common/Partials/_admin-content-header.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/Partials/_admin-content-header.html.twig
@@ -26,11 +26,17 @@
 
             <div class="row">
                 <div class="container-fluid">
-                    <div class="admin-content-header-logo">
-                        <a href="index.html">LOGO
-                            {#<img src="{{ asset('bundles/dashboard/logo/logo.jpg') }}" alt="Logo">#}
-                        </a>
-                    </div><!-- /admin-content-header-logo -->
+                    <div class="page-title" style="position: absolute;">
+                        <div class="row">
+                            <ul>
+                                <li><a href="#"><i class="fa fa-home"></i> Home</a> / </li>
+                                {#<i class="mdi-hardware-keyboard-arrow-right"></i>#}
+                                {% block breadcrumb %}
+                                    <li><a href="#">Dashboard</a></li>
+                                {% endblock breadcrumb%}
+                            </ul>
+                        </div>
+                    </div>
                     <div class="admin-content-header-menu">
                         <ul class="admin-content-header-menu-inner collapse">
                             <li><a href="admin-dashboard.html#">FAQ</a></li>
