Add new templeate to dashboard

--- a/src/DashboardBundle/Resources/views/Common/Partials/_admin-content-header.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/Partials/_admin-content-header.html.twig
@@ -22,6 +22,9 @@
          margin-bottom: 0px;
          margin-top: 0px;
     }
+    .property-row-content {
+         width: 69.6%;
+     }
 </style>
 
             <div class="row">
