--- a/src/DashboardBundle/Resources/views/Common/partials/_admin-navegation.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/partials/_admin-navegation.html.twig
@@ -21,6 +21,9 @@
                     <a href="admin-map.html"><strong><i class="fa fa-globe"></i></strong> <span>Flyers</span></a>
                 </li>
                 <li class="">
+                    <a href="{{path('template_index')}}"><strong><i class="fa fa-file-text-o"></i></strong> <span>Templates</span></a>
+                </li>
+                <li class="">
                     <a href="admin-people.html"><strong><i class="fa fa-users"></i></strong> <span>Contact</span></a>
                 </li>
             </ul>
