--- a/src/DashboardBundle/Resources/views/Templates/index.html.twig
+++ b/src/DashboardBundle/Resources/views/Templates/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'DashboardBundle:Common:backend.html.twig' %}
+{% extends 'DashboardBundle:Common:backend2.html.twig' %}
 
 {% block breadcrumb %}
 	<li><a href="#">Templates</a></li>
