Add new templeate to dashboard

--- a/src/DashboardBundle/Resources/views/Properties/index.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/index.html.twig
@@ -66,6 +66,7 @@
 		<h5> Properties </h5>
 	</div>
 	<div class="content">
+
 		<div class="row">
 			<div class="col m3" style="padding-right: 0px">
 				<div class="card-image image-properties">
@@ -94,6 +95,36 @@
 					</div>
 			</div>
 		</div>
+
+		<div class="row">
+			<div class="col m3" style="padding-right: 0px">
+				<div class="card-image image-properties">
+					<img src="{{ asset('bundles/dashboard/properties/2.jpg') }}">
+				</div>
+			</div>
+			<div class="col m9">
+				<div class="card body-properties">
+					<div class="card-content dark-clare-text">
+						<span class="card-title dark-text">Card Title</span>
+						<ul class="property-row-location">
+							<li><a href="#">New York</a>,</li>
+							<li><a href="#">Brooklyn</a></li>
+						</ul>
+						<p>I am a very simple card. I am good at containing small bits of information.
+							I am convenient because I require little markup to use effectively.</p>
+					</div>
+					<div class="card-action card-action-properties" style="padding: 13px;">
+						<a href="#" class="azure-text"><i class="fa fa-dollar"></i> 12,500</a>
+						<a href="#" class="azure-text"><i class="fa fa-arrows"></i> 98 sqft</a>
+						<a href="#" class="azure-text"><i class="fa fa-car"></i> 1</a>
+						<a href="#" class="azure-text"><i class="fa fa-file"></i> Rent</a>
+						<a href="#" class="azure-text right"><i class="fa fa-share-alt"></i></a>
+						<a href="#" class="azure-text right"><i class="fa fa-heart-o"></i></a>
+					</div>
+				</div>
+			</div>
+		</div>
+
 	</div>
 </div>
 			{#{% for data in properties %}#}
