--- a/src/DashboardBundle/Resources/views/Common/backend2.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/backend2.html.twig
@@ -108,10 +108,14 @@
                             <i class="ion ion-social-angular"></i> Dashboard
                         </a>
                     </li>
-                    <li>
-                        <a href="{{path('properties_index')}}" class="waves-effect waves-blue">
-                            <i class="fa fa-magic"></i> Properties
-                        </a>
+                    <li class="">
+                        <a href="#" class="yay-sub-toggle waves-effect waves-blue"><i
+                                    class="fa fa-dashboard"></i> Properties <span
+                                    class="yay-collapse-icon mdi-navigation-expand-more"></span></a>
+                        <ul style="display: none; height: 80px; padding-top: 0px; margin-top: 0px; padding-bottom: 0px; margin-bottom: 0px;">
+                            <li><a href="{{path('properties_index')}}" class="waves-effect waves-blue">My Properties</a></li>
+                            <li><a href="{{path('properties_index')}}" class="waves-effect waves-blue">MLS Properties</a></li>
+                        </ul>
                     </li>
                     <li>
                         <a href="#" class="waves-effect waves-blue"><i
